--- a/dash/templates/profile/index.html
+++ b/dash/templates/profile/index.html
@@ -344,7 +344,7 @@
                   </div>
                   <div class="form-group">
                     <div class="col-sm-12">
-                      <button type="submit" class="btn btn-primary">Change</button>
+                      <button type="submit" class="btn btn-primary">Change Password</button>
                     </div>
                   </div>
                 </form>
@@ -364,7 +364,7 @@
                   </div>
                   <div class="form-group">
                     <div class="col-sm-12">
-                      <button type="submit" class="btn btn-primary">Update</button>
+                      <button type="submit" class="btn btn-primary">Change Username</button>
                     </div>
                   </div>                
                 </form>
@@ -383,9 +383,38 @@
                   </div> 
                   <div class="form-group">
                     <div class="col-sm-12">
-                      <button type="submit" class="btn btn-primary">Update</button>
+                      <button type="submit" class="btn btn-primary">Update Profile</button>
                     </div>
                   </div>                
+                </form>
+                <hr />
+                <h4>Change Your Email</h4>
+                <form class="form-horizontal" action="" method="post">
+                <input type="hidden" name="type" value="formChangeEmail">
+                {{ formChangeEmail.hidden_tag() }}
+                  <div class="form-group has-feedback">
+                    <div class="col-sm-12">
+                      <input type="email" name="email" class="form-control" placeholder="Your New Email"">
+                      <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                      {% if formChangeEmail.email.errors %}
+                        <span class="text-red">{% for error in formChangeEmail.email.errors %} {{ error }} {% endfor %}</span>
+                      {% endif %}
+                    </div>
+                  </div>
+                  <div class="form-group has-feedback">
+                    <div class="col-sm-12">
+                      <input type="password" name="password" class="form-control" placeholder="Your Password">
+                      <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                      {% if formChangeEmail.password.errors %}
+                        <span class="text-red">{% for error in formChangeEmail.password.errors %} {{ error }} {% endfor %}</span>
+                      {% endif %}
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="col-sm-12">
+                      <button type="submit" class="btn btn-primary">Change Email</button>
+                    </div>
+                  </div>
                 </form>
               </div>
               <!-- /.tab-pane -->
