Removed Roles and Added Admin Pages
Old roles systems was not practical and too complicated.
That is why I have removed the old system and starting new one.
Meantime I have added a new admin application for admin functions.

--- a/dash/flask_adminlte/templates/adminlte/base.html
+++ b/dash/flask_adminlte/templates/adminlte/base.html
@@ -55,8 +55,8 @@
                 <header class="main-header">
                     {% block brand %}
                       <a href="#" class="logo">
-                          <span class="logo-mini"><strong>LTE</strong></span>
-                          <span class="logo-lg">Admin<strong>LTE</strong></span>
+                          <span class="logo-mini"><strong>- dash</strong></span>
+                          <span class="logo-lg"><strong>- </strong>stack</span>
                       </a>
                     {% endblock %}
 
