--- a/dash/templates/admin/edit_user.html
+++ b/dash/templates/admin/edit_user.html
@@ -31,7 +31,6 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="box">
-            <!-- /.box-header -->
             <div class="register-box-body">
                 <form class="form-horizontal" action="" method="post">
                 {{ form.hidden_tag() }}
@@ -103,5 +102,15 @@
         <!-- /.col -->
       </div>
       <!-- /.row -->
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="box">
+            <div class="register-box-body">
+              <a href="{{ url_for('.create_user_provider_admin', id=user.id) }}">
+              <button class="btn btn-primary btn-flat">Create Account on Provider</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
 {%- endblock content %}
