Network Module - IP Address Management
Add new functionality to manage fixed and floating IPs

--- a/dash/templates/sidebar_menu.html
+++ b/dash/templates/sidebar_menu.html
@@ -76,9 +76,9 @@
         </a>
       </li>
       <li>
-        <a href="{{ url_for('network.index') }}">
+        <a href="{{ url_for('network.list_ips') }}">
           <i class="fa fa-list"></i>
-          List Network
+          List IPs
         </a>
       </li>
     </ul>
