--- a/dash/templates/navbar.html
+++ b/dash/templates/navbar.html
@@ -195,6 +195,31 @@
                 </li>
               </ul>
             </li>
+            
+            <!-- Provider Selection Menu -->
+            <li class="dropdown notifications-menu">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                <i class="fa fa-warning"></i>
+                <span >Select Provider</span>
+              </a>
+              <ul class="dropdown-menu">
+                <li class="header">2 Providers </li>
+                <li>
+                  <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto;"><ul class="menu" style="overflow: hidden; width: 100%;">
+                    {% for provider in all_providers() %}
+                    <li>
+                      <a href="{{ url_for('main.select_provider', id=provider.id) }}">
+                        <i class="ion ion-ios7-people info"></i> {{  provider.name }}
+                      </a>
+                    </li>
+                    {% endfor %}
+                  </ul><div class="slimScrollBar" style="width: 3px; position: absolute; top: 0px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 195.122px; background: rgb(0, 0, 0);"></div><div class="slimScrollRail" style="width: 3px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 0.2; z-index: 90; right: 1px; background: rgb(51, 51, 51);"></div></div>
+                </li>
+                <li class="footer"><a href="#">View all providers</a></li>
+              </ul>
+            </li>
+
+            
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -206,7 +231,8 @@
                 <li class="user-header bg-light-blue">
                   <img src="{{ current_user.avatar }}" class="img-circle" alt="User Image" />
                   <p>
-                    {{ current_user.full_name }} - role : {{ current_user.role.name }}
+                    User Name: {{ current_user.full_name }} - Role : {{ current_user.role.name }} <br />
+                    Provider : {{ session['selected_provider'] }} <br />
                     <small>Member since {{ current_user.created_at.strftime("%b. %Y") }}</small>
                   </p>
                 </li>
